--- a/Template1/finished.html
+++ b/Template1/finished.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="/d3.v2.js" type="text/javascript"></script>
+        <script src="../d3.v2.js" type="text/javascript"></script>
 
         <title>
             Cost of Living Scatter Plot
@@ -26,7 +26,7 @@
         <svg></svg>
         <script type="text/javascript">
             //load a remote CSV file
-            d3.csv("/data/costofliving.csv", function(col) {
+            d3.csv("../data/costofliving.csv", function(col) {
 
                 //Let's convert the data to numbers that should be numbers
                 col.forEach(function(o) {
