--- a/Template1/index.html
+++ b/Template1/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <script src="/d3.v2.js" type="text/javascript"></script>
+        <script src="../d3.v2.js" type="text/javascript"></script>
     </head>
     <body>
         <svg></svg>
         <script type="text/javascript">
             //load a remote CSV file
-            d3.csv("/data/costofliving.csv", function(data) {
+            d3.csv("../data/costofliving.csv", function(data) {
                 //Our CSV file is turned into an array, let's see what it looks like
                 console.log("hi data", data);
 
