--- a/Template2/finished.html
+++ b/Template2/finished.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="/d3.v2.js" type="text/javascript"></script>
+        <script src="../d3.v2.js" type="text/javascript"></script>
         <style type="text/css">
             .country {
                 fill:#e3e3e3;
@@ -51,7 +51,7 @@
               })
 
             //now we download the country boundaries
-            d3.json("/data/world-countries.json", function(countries) {
+            d3.json("../data/world-countries.json", function(countries) {
                 var countriesGroup = chart.select("#countries");
                 //create a path for each country
                 countriesGroup.selectAll("path")
@@ -73,7 +73,7 @@
                 countriesGroup.select("#Antarctica").remove();
 
                 //load a remote CSV file
-                d3.csv("/data/costofliving.csv", function(col) {
+                d3.csv("../data/costofliving.csv", function(col) {
 
                     //Let's convert the data to numbers that should be numbers
                     col.forEach(function(o) {
