--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <br>
         
         Today's Goals:<br>
-        <a href="Template1/finished.html">Scatter Plot</a><br>
-        <a href="Template2/finished.html">World Map</a>
+        <a href="Template1/finished.html" target="_blank">Scatter Plot</a><br>
+        <a href="Template2/finished.html" target="_blank">World Map</a>
         <br><br>
         Bonus:<br>
-        <a href="http://enjalot.com/tributary/3714774/">Combo</a>
+        <a href="http://enjalot.com/tributary/3714774/" target="_blank">Combo</a>
 
     </div>
 
@@ -103,7 +103,7 @@
 
 </div>
 
-<script src="/d3.v2.js" type="text/javascript"></script>
+<script src="d3.v2.js" type="text/javascript"></script>
 
 <script>
     var colors = d3.scale.category20();
