showing the goals as iframes

--- a/index.html
+++ b/index.html
@@ -10,16 +10,34 @@
 <body>
 <div id="content">
     <div id="intro" class="section">
+        <p style="text-align: center">
         <span class="title">Introduction to d3.js</span>
         <br>
         <br>
         
         Today's Goals:<br>
-        <a href="Template1/finished.html" target="_blank">Scatter Plot</a><br>
-        <a href="Template2/finished.html" target="_blank">World Map</a>
+        </p>
+        <div>
+            <iframe src="Template1/finished.html" frameBorder=0 width=760 height=600></iframe>
+            <p style="" class="linktitle">
+            <a href="Template1/finished.html" target="_blank">Scatter Plot</a>
+            </p>
+
+        </div>
+        <div>
+            <iframe src="Template2/finished.html" frameBorder=0 width=760 height=600></iframe>
+            <p style="" class="linktitle">
+            <a href="Template2/finished.html" target="_blank">World Map</a>
+            </p>
+        </div>
+
         <br><br>
+        <p style="text-align:center">
         Bonus:<br>
+        <iframe src="http://enjalot.com/tributary/3714774/" frameBorder=0 width=760 height=650></iframe>
+        <p style="" class="linktitle">
         <a href="http://enjalot.com/tributary/3714774/" target="_blank">Combo</a>
+        </p>
 
     </div>
 
