--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 
         <br><br>
         <p style="text-align:center">
-        Bonus:<br>
         <iframe src="http://enjalot.com/tributary/3714774/" frameBorder=0 width=760 height=650></iframe>
         <p style="" class="linktitle">
         <a href="http://enjalot.com/tributary/3714774/" target="_blank">Combo</a>
@@ -103,7 +102,7 @@
         <span class="title">World Map</span>
 
         <br><br>
-        <span class="subtitle">Projections</span>
+        <span class="subtitle">Projections</span> <a href="https://github.com/mbostock/d3/wiki/Geo-Projections" target="_blank">d3 docs</a>
         <iframe src="http://enjalot.com/tributary/3717149/" width=760 height=400 frameBorder=0></iframe>
         <a href="http://enjalot.com/tributary/3717149/" class="example" target="_blank">Example</a>
 
@@ -123,15 +122,20 @@
 
         <br><br>
         <span class="subtitle">One Dimension</span>
+        <iframe src="http://enjalot.com/tributary/3717372/" width=760 height=400 frameBorder=0></iframe>
+        <a href="http://enjalot.com/tributary/3717372/" class="example" target="_blank">Example</a>
 
         <br><br>
-        <span class="subtitle">Transition Circles</span>
-
-        <br><br>
-        <span class="subtitle">Transition Scatter Plot</span>
+        <span class="subtitle">Transition One Dimension</span>
+        <iframe src="http://enjalot.com/tributary/3717453/" width=760 height=400 frameBorder=0></iframe>
+        <a href="http://enjalot.com/tributary/3717453/" class="example" target="_blank">Example</a>
 
         <br><br>
         <span class="subtitle">Scatter Plot to Map and Back</span>
+        <iframe src="http://enjalot.com/tributary/3714774/" width=760 height=650 frameBorder=0></iframe>
+        <a href="http://enjalot.com/tributary/3714774/" class="example" target="_blank">Example</a>
+
+
 
 
 
@@ -140,7 +144,7 @@
     <div id="bonus" class="section">
         <span class="title">Data Viz Bonus</span>
 
-        <iframe src="http://enjalot.com/tributary/3714311/" width=760 height=750 frameBorder=0></iframe>
+        <iframe src="http://enjalot.com/tributary/3714311/" width=760 height=850 frameBorder=0></iframe>
         <a href="http://enjalot.com/tributary/3714311/" class="example" target="_blank">Example</a>
         
     </div>
