adding useful links and some more docs links

--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
         <a href="http://www.numbeo.com/cost-of-living/rankings.jsp">Cost of Living Indices</a>
         <br>
         <a href="http://www.numbeo.com/cost-of-living/cpi_explained.jsp">Explanation of Index</a>
+        <br><br>
+        Useful links:
+        <br>
+        <a target='_blank' href="https://github.com/mbostock/d3/wiki/API-Reference">D3 API Docs</a><br>
+        <a target='_blank' href="http://www.w3.org/TR/SVG/">SVG Spec</a><br>
+        <a target='_blank' href="https://developer.mozilla.org/en-US/docs/SVG">Mozilla Developer Network docs for SVG</a> <br>
+        <a target='_blank' href="http://www.w3.org/TR/selectors/">CSS Selectors</a><br>
+        <a target='_blank' href="http://alignedleft.com/tutorials/d3/fundamentals/">Intro Tutorial by @alignedleft</a><br>
     </div>
 
     <div id="scatter" class="section">
@@ -103,6 +111,7 @@
 
         <br><br>
         <span class="subtitle">Projections</span> <a href="https://github.com/mbostock/d3/wiki/Geo-Projections" target="_blank">d3 docs</a>
+        <a href="http://bl.ocks.org/3711245" target="_blank"> advanced</a>
         <iframe src="http://enjalot.com/tributary/3717149/" width=760 height=400 frameBorder=0></iframe>
         <a href="http://enjalot.com/tributary/3717149/" class="example" target="_blank">Example</a>
 
@@ -126,7 +135,7 @@
         <a href="http://enjalot.com/tributary/3717372/" class="example" target="_blank">Example</a>
 
         <br><br>
-        <span class="subtitle">Transition One Dimension</span>
+        <span class="subtitle">Transition One Dimension</span> <a href="https://github.com/mbostock/d3/wiki/Transitions" target="_blank">d3 docs</a>
         <iframe src="http://enjalot.com/tributary/3717453/" width=760 height=400 frameBorder=0></iframe>
         <a href="http://enjalot.com/tributary/3717453/" class="example" target="_blank">Example</a>
 
