add links to project files

--- a/gaffta/index.html
+++ b/gaffta/index.html
@@ -30,7 +30,10 @@
               <a href="#/6">6. Arrays and Functions</a><br>
               <a href="#/7">7. Data Driven Documents</a><br>
               <a href="#/8">8. Scales</a><br>
+              <br><br>
+              <a target=_blank href="tweets.html">Project A (tweets)</a> <a target=_blank href="costofliving.html">Project B (Cost of Living)</a>
             </span>
+
           </section>
           <section>
           <a target=_blank href="http://tributary.io">Tributary</a><br><br><br>
