--- a/gaffta/index.html
+++ b/gaffta/index.html
@@ -31,7 +31,8 @@
               <a href="#/7">7. Data Driven Documents</a><br>
               <a href="#/8">8. Scales</a><br>
               <br><br>
-              <a target=_blank href="tweets.html">Project A (tweets)</a> <a target=_blank href="costofliving.html">Project B (Cost of Living)</a>
+              <a target=_blank href="tweets.html">Project A (tweets)</a> <a target=_blank href="costofliving.html">Project B (Cost of Living)</a><br>
+              <a target=_blank href="tweets.html">Project A (tweets, finished)</a> <a target=_blank href="costofliving.html">Project B (Cost of Living, finished)</a>
             </span>
 
           </section>
