fix finished links

--- a/gaffta/index.html
+++ b/gaffta/index.html
@@ -32,7 +32,7 @@
               <a href="#/8">8. Scales</a><br>
               <br><br>
               <a target=_blank href="tweets.html">Project A (tweets)</a> <a target=_blank href="costofliving.html">Project B (Cost of Living)</a><br>
-              <a target=_blank href="tweets.html">Project A (tweets, finished)</a> <a target=_blank href="costofliving.html">Project B (Cost of Living, finished)</a>
+              <a target=_blank href="tweets_finished.html">Project A (tweets, finished)</a> <a target=_blank href="costofliving_finished.html">Project B (Cost of Living, finished)</a>
             </span>
 
           </section>
