fix d3 link for tweets_finished

--- a/gaffta/tweets_finished.html
+++ b/gaffta/tweets_finished.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0053)http://enjalot.github.com/intro-d3/gaffta/tweets.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <script src="./tweets_files/d3.v2.min.js"></script>
+    <script src="d3.v2.min.js"></script>
 
 <style>
 
