adding more slides and reddit project

--- a/gaffta/index.html
+++ b/gaffta/index.html
@@ -30,9 +30,18 @@
               <a href="#/6">6. Arrays and Functions</a><br>
               <a href="#/7">7. Data Driven Documents</a><br>
               <a href="#/8">8. Scales</a><br>
+              <a href="#/9">9. Interaction</a><br>
+              <a href="#/10">10. Transitions</a><br>
+              <a href="#/11">11. Data Manipulation</a><br>
               <br><br>
-              <a target=_blank href="tweets.html">Project A (tweets)</a> <a target=_blank href="costofliving.html">Project B (Cost of Living)</a><br>
-              <a target=_blank href="tweets_finished.html">Project A (tweets, finished)</a> <a target=_blank href="costofliving_finished.html">Project B (Cost of Living, finished)</a>
+              <a target=_blank href="tweets.html">Project A (tweets)</a> 
+              <a target=_blank href="tweets_finished.html">Project A (tweets, finished)</a>
+              <br>
+              <a target=_blank href="costofliving.html">Project B (Cost of Living)</a>
+              <a target=_blank href="costofliving_finished.html">Project B (Cost of Living, finished)</a>
+              <br>
+              <a target=_blank href="reddit.html">Project C (reddit)</a> 
+              <a target=_blank href="reddit_finished.html">Project C (reddit, finished)</a>
             </span>
 
           </section>
@@ -353,6 +362,7 @@ Wed - Sunny. High: 68 Low: 50<br />
           <span class="subtitle">linear</span>
           <br>
           <iframe frameBorder=0 src="slides/linear_scale.html"></iframe>          
+          <a target=_blank href="https://github.com/mbostock/d3/wiki/Quantitative-Scales#wiki-linear">(linear scale)</a>
           </section>
           <!--
           <section>
@@ -367,6 +377,7 @@ Wed - Sunny. High: 68 Low: 50<br />
           <span class="subtitle">color</span>
           <br>
           <iframe frameBorder=0 src="slides/color_scale.html"></iframe>          
+          <a target=_blank href="https://github.com/mbostock/d3/wiki/Ordinal-Scales#wiki-ordinal">(ordinal scale)</a>
           </section>
           <!--
           <section>
@@ -377,9 +388,39 @@ Wed - Sunny. High: 68 Low: 50<br />
           </section>
           -->
         </section>
+      </section>
 
+      <section>
+        <span class="title">Interaction</span>
+        <section>
+          <br><br>
+          <br>
+          <iframe frameBorder=0 src="slides/interaction.html"></iframe>
+          <a target=_blank href="https://github.com/mbostock/d3/wiki/Selections#wiki-on">(selection.on)</a>
+          <a target=_blank href="http://tributary.io/inlet/3883064/">html select example</a>
         </section>
+      </section>
  
+      <section>
+        <span class="title">Transitions</span>
+        <section>
+          <br><br>
+          <br>
+          <iframe frameBorder=0 src="slides/transitions.html"></iframe>
+          <a target=_blank href="https://github.com/mbostock/d3/wiki/Transitions">(Transitions)</a>
+        </section>
+      </section>
+
+      <section>
+        <span class="title">Data Manipulation</span>
+        <section>
+          <br><br>
+          <a target=_blank href="https://github.com/mbostock/d3/wiki/Arrays">d3 Arrays</a><br><br>
+          <a target=_blank href="http://underscorejs.org/">underscore.js</a><br><br>
+          <a target=_blank href="https://github.com/mbostock/d3/wiki/Layouts">d3 Layouts</a><br><br>
+        </section>
+      </section>
+
 
     </div>
 </div>
