--- a/gaffta/index.html
+++ b/gaffta/index.html
@@ -396,7 +396,7 @@ Wed - Sunny. High: 68 Low: 50<br />
           <br><br>
           <br>
           <iframe frameBorder=0 src="slides/interaction.html"></iframe>
-          <a target=_blank href="https://github.com/mbostock/d3/wiki/Selections#wiki-on">(selection.on)</a>
+          <a target=_blank href="https://github.com/mbostock/d3/wiki/Selections#wiki-on">(selection.on)</a><br>
           <a target=_blank href="http://tributary.io/inlet/3883064/">html select example</a>
         </section>
       </section>
