--- a/gaffta/index.html
+++ b/gaffta/index.html
@@ -33,6 +33,7 @@
               <a href="#/9">9. Interaction</a><br>
               <a href="#/10">10. Transitions</a><br>
               <a href="#/11">11. Data Manipulation</a><br>
+              <a href="#/12">12. Components</a><br>
               <br><br>
               <a target=_blank href="tweets.html">Project A (tweets)</a> 
               <a target=_blank href="tweets_finished.html">Project A (tweets, finished)</a>
