--- a/gaffta/index.html
+++ b/gaffta/index.html
@@ -53,6 +53,7 @@
           <a target=_blank href="http://enja.org">enja.org</a></br>
           </section>
           <section>
+          <a href="http://tributary.io/inlet/4084162/">Resulting Visualization of this form</a>
 <iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dDVZbjRzLWxVTkVSRkFuZmNtMlNVNGc6MQ" width="760" height="741" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
           </section>
           
