update links in cost of living workshop

--- a/costofliving/index.html
+++ b/costofliving/index.html
@@ -33,9 +33,9 @@
 
         <br><br>
         <p style="text-align:center">
-        <iframe src="http://enjalot.com/tributary/3714774/" frameBorder=0 width=760 height=650></iframe>
+        <iframe src="http://tributary.io/s/3714774/" frameBorder=0 width=760 height=650></iframe>
         <p style="" class="linktitle">
-        <a href="http://enjalot.com/tributary/3714774/" target="_blank">Combo</a>
+        <a href="http://tributary.io/inlet/3714774/" target="_blank">Combo</a>
         </p>
 
     </div>
@@ -78,28 +78,28 @@
 
         <br><br>
         <span class="subtitle">Draw Circles</span>
-        <iframe src="http://enjalot.com/tributary/3716670/" width=760 height=400 frameBorder=0></iframe>
-        <a href="http://enjalot.com/tributary/3716670/" class="example" target="_blank">Example</a>
+        <iframe src="http://tributary.io/s/3716670/" width=760 height=400 frameBorder=0></iframe>
+        <a href="http://tributary.io/inlet/3716670/" class="example" target="_blank">Example</a>
 
         <br><br>
         <span class="subtitle">Draw Circles with Data</span>
-        <iframe src="http://enjalot.com/tributary/3716378/" width=760 height=400 frameBorder=0></iframe>
-        <a href="http://enjalot.com/tributary/3716378/" class="example" target="_blank">Example</a>
+        <iframe src="http://tributary.io/s/3716378/" width=760 height=400 frameBorder=0></iframe>
+        <a href="http://tributary.io/inlet/3716378/" class="example" target="_blank">Example</a>
 
         <br><br>
         <span class="subtitle">Scales</span> <a href="https://github.com/mbostock/d3/wiki/Scales" target="_blank">d3 docs</a>
-        <iframe src="http://enjalot.com/tributary/3716793/" width=760 height=400 frameBorder=0></iframe>
-        <a href="http://enjalot.com/tributary/3716793/" class="example" target="_blank">Example</a>
+        <iframe src="http://tributary.io/s/3716793/" width=760 height=400 frameBorder=0></iframe>
+        <a href="http://tributary.io/inlet/3716793/" class="example" target="_blank">Example</a>
 
         <br><br>
         <span class="subtitle">Axes</span> <a href="https://github.com/mbostock/d3/wiki/SVG-Axes" target="_blank">d3 docs</a>
-        <iframe src="http://enjalot.com/tributary/3716816/" width=760 height=400 frameBorder=0></iframe>
-        <a href="http://enjalot.com/tributary/3716816/" class="example" target="_blank">Example</a>
+        <iframe src="http://tributary.io/s/3716816/" width=760 height=400 frameBorder=0></iframe>
+        <a href="http://tributary.io/inlet/3716816/" class="example" target="_blank">Example</a>
 
         <br><br>
         <span class="subtitle">Titles / Labels</span>
-        <iframe src="http://enjalot.com/tributary/3716875/" width=760 height=400 frameBorder=0></iframe>
-        <a href="http://enjalot.com/tributary/3716875/" class="example" target="_blank">Example</a>
+        <iframe src="http://tributary.io/s/3716875/" width=760 height=400 frameBorder=0></iframe>
+        <a href="http://tributary.io/inlet/3716875/" class="example" target="_blank">Example</a>
 
 
 
@@ -112,13 +112,13 @@
         <br><br>
         <span class="subtitle">Projections</span> <a href="https://github.com/mbostock/d3/wiki/Geo-Projections" target="_blank">d3 docs</a>
         <a href="http://bl.ocks.org/3711245" target="_blank"> advanced</a>
-        <iframe src="http://enjalot.com/tributary/3717149/" width=760 height=400 frameBorder=0></iframe>
-        <a href="http://enjalot.com/tributary/3717149/" class="example" target="_blank">Example</a>
+        <iframe src="http://tributary.io/s/3717149/" width=760 height=400 frameBorder=0></iframe>
+        <a href="http://tributary.io/inlet/3717149/" class="example" target="_blank">Example</a>
 
         <br><br>
         <span class="subtitle">Plotting Data</span>
-        <iframe src="http://enjalot.com/tributary/3714670/" width=760 height=400 frameBorder=0></iframe>
-        <a href="http://enjalot.com/tributary/3714670/" class="example" target="_blank">Example</a>
+        <iframe src="http://tributary.io/s/3714670/" width=760 height=400 frameBorder=0></iframe>
+        <a href="http://tributary.io/inlet/3714670/" class="example" target="_blank">Example</a>
 
 
 
@@ -131,18 +131,18 @@
 
         <br><br>
         <span class="subtitle">One Dimension</span>
-        <iframe src="http://enjalot.com/tributary/3717372/" width=760 height=400 frameBorder=0></iframe>
-        <a href="http://enjalot.com/tributary/3717372/" class="example" target="_blank">Example</a>
+        <iframe src="http://tributary.io/s/3717372/" width=760 height=400 frameBorder=0></iframe>
+        <a href="http://tributary.io/inlet/3717372/" class="example" target="_blank">Example</a>
 
         <br><br>
         <span class="subtitle">Transition One Dimension</span> <a href="https://github.com/mbostock/d3/wiki/Transitions" target="_blank">d3 docs</a>
-        <iframe src="http://enjalot.com/tributary/3717453/" width=760 height=400 frameBorder=0></iframe>
-        <a href="http://enjalot.com/tributary/3717453/" class="example" target="_blank">Example</a>
+        <iframe src="http://tributary.io/s/3717453/" width=760 height=400 frameBorder=0></iframe>
+        <a href="http://tributary.io/inlet/3717453/" class="example" target="_blank">Example</a>
 
         <br><br>
         <span class="subtitle">Scatter Plot to Map and Back</span>
-        <iframe src="http://enjalot.com/tributary/3714774/" width=760 height=650 frameBorder=0></iframe>
-        <a href="http://enjalot.com/tributary/3714774/" class="example" target="_blank">Example</a>
+        <iframe src="http://tributary.io/s/3714774/" width=760 height=650 frameBorder=0></iframe>
+        <a href="http://tributary.io/inlet/3714774/" class="example" target="_blank">Example</a>
 
 
 
@@ -153,8 +153,8 @@
     <div id="bonus" class="section">
         <span class="title">Data Viz Bonus</span>
 
-        <iframe src="http://enjalot.com/tributary/3714311/" width=760 height=850 frameBorder=0></iframe>
-        <a href="http://enjalot.com/tributary/3714311/" class="example" target="_blank">Example</a>
+        <iframe src="http://tributary.io/s/3714311/" width=760 height=850 frameBorder=0></iframe>
+        <a href="http://tributary.io/inlet/3714311/" class="example" target="_blank">Example</a>
         
     </div>
 
