--- a/frontendmasters/svg/index.html
+++ b/frontendmasters/svg/index.html
@@ -26,15 +26,11 @@
   }
 
   .sidebyside {
-    border: 1px solid orange;
     display: block;
-    margin-top: 28px;
   }
   .sidebyside .left {
-    border: 1px solid blue;
   }
   .sidebyside .right {
-    border: 1px solid green;
   }
 
   .sidebyside svg {
@@ -78,19 +74,23 @@
     <div class="sidebyside">
       <div class="left">
         <div class="editor"></div>
+        <p>
+          The circle's unique attributes are <b>cx</b>, <b>cy</b> for the center coordinates and <b>r</b> for the radius.
+          Try changing them to see how the numbers map to the visual. Notice that the smaller <b>cy</b> is, the closer it is to the top.
+        </p>
       </div>
       <div class="right">
         <svg width="100%" height=200>
-        <circle cx=100 cy=100 r=10 fill="#bffbff"></circle>
+          <circle cx=200 cy=100 r=30 fill="#25B0B0"></circle>
         </svg>
       </div>
     </div>
     <script>
+    (function() {
       var options = {
         mode: 'html',
         lineNumbers: true,
         viewportMargin: Infinity,
-        theme: 'vibrant-ink'
       }
       var editor = d3.select("#circle").select(".editor");
       var svg = d3.select("#circle svg");
@@ -98,7 +98,7 @@
 
       var cm = CodeMirror(editor.node(), options);
       Inlet(cm)
-      var text = "<circle\n  cx=100\n  cy=100\n  r=10\n  fill='#bffbff'>\n</circle>";
+      var text = "<circle\n  cx=200\n  cy=100\n  r=30\n  fill='#25B0B0'>\n</circle>";
       cm.setValue(text);
       cm.on("change", function() {
         var value = cm.getValue();
@@ -107,16 +107,147 @@
         svg.selectAll("*").remove()
         sticker(svg)
       })
+    }())
     </script>
   </div>
-  <div name="rect">
+
+  <div name="rect" id="rect">
     <p>rect</p>
+    <div class="sidebyside">
+      <div class="left">
+        <div class="editor"></div>
+        <p>
+          The rect's unique attributes are <b>x</b>, <b>y</b> for the top left coordinates and <b>width</b>, <b>height</b> for the dimensions.
+          You can play with the corner radius using the <b>rx</b> and <b>ry</b> attributes.
+        </p>
+      </div>
+      <div class="right">
+        <svg width="100%" height=200>
+          <rect x=200 y=50 width=100 height=100 rx=0 ry=0 fill="#25B0B0"></rect>
+        </svg>
+      </div>
+    </div>
+    <script>
+    (function() {
+      var options = {
+        mode: 'html',
+        lineNumbers: true,
+        viewportMargin: Infinity,
+      }
+      var editor = d3.select("#rect").select(".editor");
+      var svg = d3.select("#rect svg");
+      var sticker = d3.sticker(svg.select("rect").node());
+
+      var cm = CodeMirror(editor.node(), options);
+      Inlet(cm)
+      var text = "<rect\n  x=200\n  y=50\n  width=100\n  height=100\n  rx=0\n  ry=0\n  fill='#25B0B0'>\n</rect>";
+      cm.setValue(text);
+      cm.on("change", function() {
+        var value = cm.getValue();
+        sticker.string(value);
+        sticker.deserialize();
+        svg.selectAll("*").remove()
+        sticker(svg)
+      })
+    }())
+    </script>
   </div>
-  <div name="path">
+
+  <div name="path" id="path">
     <p>path</p>
+    <div class="sidebyside">
+      <div class="left">
+        <div class="editor"></div>
+        <p>
+        The path's unique attribute is <b>d</b>. Directly manipulating the <b>d</b> attribute is cumbersome, so most people will use <b>d3.svg.line</b> which we will cover in the <a src="../nonbinding">Non Binding API</a> section.
+        </p>
+      </div>
+      <div class="right">
+        <svg width="100%" height=200>
+        <path d="
+            M50,100
+            L131,66
+            L259,115
+            L339,50
+            L400,98"
+          fill=none
+          stroke=#25B0B0></path>
+        </svg>
+      </div>
+    </div>
+    <script>
+    (function() {
+      var options = {
+        mode: 'html',
+        lineNumbers: true,
+        viewportMargin: Infinity,
+      }
+      var editor = d3.select("#path").select(".editor");
+      var svg = d3.select("#path svg");
+      var sticker = d3.sticker(svg.select("path").node());
+
+      var cm = CodeMirror(editor.node(), options);
+      Inlet(cm)
+      var text = "<path d='\n  M50,100\n  L131,66\n  L259,115\n  L339,50\n  L400,98'\n  fill=none\n  stroke='#25B0B0'></path>"
+      cm.setValue(text);
+      cm.on("change", function() {
+        var value = cm.getValue();
+        sticker.string(value);
+        sticker.deserialize();
+        svg.selectAll("*").remove()
+        sticker(svg)
+      })
+    }())
+    </script>
   </div>
-  <div name="g">
+
+  <div name="g" id="g">
     <p>g</p>
+    <div class="sidebyside">
+      <div class="left">
+        <div class="editor"></div>
+        <p>
+          The <b>g</b> element allows you to <b>group</b> elements together. Try changing the values in the <b>transform</b> attribute to see the circles move together.
+        </p>
+      </div>
+      <div class="right">
+        <svg width="100%" height=200>
+          <g transform="translate(100, 100)">
+            <circle cx=20 cy=10 r=30 fill="#25B0B0"></circle>
+            <circle cx=100 cy=10 r=30 fill="#25B0B0"></circle>
+          </g>
+        </svg>
+      </div>
+    </div>
+    <script>
+      (function() {
+      var options = {
+        mode: 'html',
+        lineNumbers: true,
+        viewportMargin: Infinity,
+      }
+      var editor = d3.select("#g").select(".editor");
+      var svg = d3.select("#g svg");
+      var sticker = d3.sticker(svg.select("g").node());
+
+      var cm = CodeMirror(editor.node(), options);
+      Inlet(cm)
+      var text = "<g transform='translate(100, 100)'>\n  <circle cx=20 cy=10 r=30 fill='#25B0B0'></circle>\n  <circle cx=100 cy=10 r=30 fill='#25B0B0'></circle>\n</g>";
+      cm.setValue(text);
+      cm.on("change", function() {
+        var value = cm.getValue();
+        sticker.string(value);
+        sticker.deserialize();
+        svg.selectAll("*").remove()
+        sticker(svg)
+      })
+    }())
+    </script>
+
   </div>
+  <div name="style">
+    <p>style vs attribute</p>
+  </div>
+
 </body>
 </html>
