--- a/frontendmasters/svg/index.html
+++ b/frontendmasters/svg/index.html
@@ -65,8 +65,12 @@
       <a href="#path">Path</a>
     </li>
     <li>
-      <a href="#g">g (transform)</a>
+      <a href="#g">Group</a>
     </li>
+    <li>
+      <a href="#style">Style</a>
+    </li>
+
   </ul>
 
   <div name="circle" id="circle">
@@ -98,7 +102,7 @@
 
       var cm = CodeMirror(editor.node(), options);
       Inlet(cm)
-      var text = "<circle\n  cx=200\n  cy=100\n  r=30\n  fill='#25B0B0'>\n</circle>";
+      var text = "<circle\n  cx=250\n  cy=100\n  r=30\n  fill='#25B0B0'>\n</circle>";
       cm.setValue(text);
       cm.on("change", function() {
         var value = cm.getValue();
@@ -212,7 +216,7 @@
       </div>
       <div class="right">
         <svg width="100%" height=200>
-          <g transform="translate(100, 100)">
+          <g transform="translate(200, 100)">
             <circle cx=20 cy=10 r=30 fill="#25B0B0"></circle>
             <circle cx=100 cy=10 r=30 fill="#25B0B0"></circle>
           </g>
@@ -232,7 +236,7 @@
 
       var cm = CodeMirror(editor.node(), options);
       Inlet(cm)
-      var text = "<g transform='translate(100, 100)'>\n  <circle cx=20 cy=10 r=30 fill='#25B0B0'></circle>\n  <circle cx=100 cy=10 r=30 fill='#25B0B0'></circle>\n</g>";
+      var text = "<g transform='translate(100, 100)'>\n  <circle cx=20 cy=10 r=30 fill='#25B0B0'>\n  </circle>\n  <circle cx=100 cy=10 r=30 fill='#25B0B0'>\n  </circle>\n</g>";
       cm.setValue(text);
       cm.on("change", function() {
         var value = cm.getValue();
@@ -245,8 +249,50 @@
     </script>
 
   </div>
-  <div name="style">
+  <div name="style" id="style">
     <p>style vs attribute</p>
+    <div class="sidebyside">
+      <div class="left">
+        <div class="editor"></div>
+        <p>
+          It is possible to use attributes for some stylistic properties of SVG elements. It is usually better to use styles and classes like the rest of HTML.
+        </p>
+      </div>
+      <div class="right">
+        <svg width="100%" height=200>
+          <g>
+            <circle cx=250 cy=100 r=30 fill="#25B0B0"></circle>
+            <circle cx=300 cy=100 r=30 style="fill:#25B0B0"></circle>
+          </g>
+        </svg>
+      </div>
+    </div>
+    <script>
+      (function() {
+      var options = {
+        mode: 'html',
+        lineNumbers: true,
+        viewportMargin: Infinity,
+      }
+      var editor = d3.select("#style").select(".editor");
+      var svg = d3.select("#style svg");
+      var sticker = d3.sticker(svg.select("g").node());
+
+      var cm = CodeMirror(editor.node(), options);
+      Inlet(cm)
+      var text = "<g>\n  <circle cx=250 cy=100 r=30 fill='#25B0B0'>\n  </circle>\n  <circle cx=300 cy=100 r=30 style='fill:#25B0B0'>\n  </circle>\n</g>";
+      cm.setValue(text);
+      cm.on("change", function() {
+        var value = cm.getValue();
+        sticker.string(value);
+        sticker.deserialize();
+        svg.selectAll("*").remove()
+        sticker(svg)
+      })
+    }())
+    </script>
+
+
   </div>
 
 </body>
