style the header a little

--- a/frontendmasters/svg/index.html
+++ b/frontendmasters/svg/index.html
@@ -15,6 +15,13 @@
     font-family: Ubuntu;
     font-size: 16px;
   }
+  h2 {
+    font-family: Ubuntu;
+    font-size: 24px;
+    width: 100%;
+    padding: 5px;
+    background-color: #dfefef;
+  }
   p {
     font-family: Lato;
     font-size: 14px;
@@ -75,7 +82,7 @@
   </ul>
 
   <div name="circle" id="circle">
-    <p>circle</p>
+    <h2>circle</h2>
     <div class="sidebyside">
       <div class="left">
         <div class="editor"></div>
@@ -117,7 +124,7 @@
   </div>
 
   <div name="rect" id="rect">
-    <p>rect</p>
+    <h2>rect</h2>
     <div class="sidebyside">
       <div class="left">
         <div class="editor"></div>
@@ -159,7 +166,7 @@
   </div>
 
   <div name="path" id="path">
-    <p>path</p>
+    <h2>path</h2>
     <div class="sidebyside">
       <div class="left">
         <div class="editor"></div>
@@ -207,7 +214,7 @@
   </div>
 
   <div name="g" id="g">
-    <p>g</p>
+    <h2>g</h2>
     <div class="sidebyside">
       <div class="left">
         <div class="editor"></div>
@@ -251,7 +258,7 @@
 
   </div>
   <div name="style" id="style">
-    <p>style vs attribute</p>
+    <h2>style vs attribute</h2>
     <div class="sidebyside">
       <div class="left">
         <div class="editor"></div>
