--- a/frontendmasters/index.html
+++ b/frontendmasters/index.html
@@ -8,10 +8,14 @@
   li {
     font-family: Ubuntu;
     font-size: 24px;
+    list-style: none;
   }
   p {
     font-family: Lato;
     font-size: 12px;
+  }
+  img {
+    height: 100px;
   }
 </style>
 </head>
