--- a/frontendmasters/svg/index.html
+++ b/frontendmasters/svg/index.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" href="../lib/codemirror.css">
   <link rel="stylesheet" href="../lib/inlet.css">
   <script src="../lib/codemirror.js"></script>
+  <script src="../lib/xml.js"></script>
+  <script src="../lib/htmlembedded.js"></script>
   <script src="../lib/d3.min.js"></script>
   <script src="../lib/sticker.js"></script>
   <script src="../lib/inlet.min.js"></script>
-</head>
 <style>
   li {
     font-family: Ubuntu;
@@ -47,6 +48,7 @@
     width: 100%;
     height: 100%;
     overflow-x: scroll;
+    padding: 15px;
   }
   aside {
     font-size: small;
@@ -57,6 +59,7 @@
     width: 180px;
     font-family: Lato;
   }
+  .cm-s-default .cm-string { color: #25B0B0; }
 
   .sidebyside {
     display: block;
@@ -136,9 +139,9 @@
     <script>
     (function() {
       var options = {
-        mode: 'html',
+        mode: 'text/html',
         lineNumbers: true,
-        viewportMargin: Infinity,
+        viewportMargin: Infinity
       }
       var editor = d3.select("#circle").select(".editor");
       var svg = d3.select("#circle svg");
@@ -179,7 +182,7 @@
     <script>
     (function() {
       var options = {
-        mode: 'html',
+        mode: 'text/html',
         lineNumbers: true,
         viewportMargin: Infinity,
       }
@@ -229,7 +232,7 @@
     <script>
     (function() {
       var options = {
-        mode: 'html',
+        mode: 'text/html',
         lineNumbers: true,
         viewportMargin: Infinity,
       }
@@ -273,7 +276,7 @@
     <script>
       (function() {
       var options = {
-        mode: 'html',
+        mode: 'text/html',
         lineNumbers: true,
         viewportMargin: Infinity,
       }
@@ -318,7 +321,7 @@
     <script>
       (function() {
       var options = {
-        mode: 'html',
+        mode: 'text/html',
         lineNumbers: true,
         viewportMargin: Infinity,
       }
