start binding section

--- a/frontendmasters/svg/index.html
+++ b/frontendmasters/svg/index.html
@@ -376,10 +376,10 @@
     <h2>Resources</h2>
     <p>
       <ul>
-        <li><a href="http://www.w3.org/TR/SVG/expanded-toc.html">SVG Reference</a>
-        <li><a href="https://developer.mozilla.org/en-US/docs/Web/SVG/Element">MDN SVG Elements</a>
-        <li><a href="http://www.w3.org/TR/SVG/paths.html">Path Reference</a>
-        <li><a href="http://alignedleft.com/tutorials/d3/fundamentals">Scott Murray's tutorial</a>
+        <li><a target=_blank href="http://www.w3.org/TR/SVG/expanded-toc.html">SVG Reference</a>
+        <li><a target=_blank href="https://developer.mozilla.org/en-US/docs/Web/SVG/Element">MDN SVG Elements</a>
+        <li><a target=_blank href="http://www.w3.org/TR/SVG/paths.html">Path Reference</a>
+        <li><a target=_blank href="http://alignedleft.com/tutorials/d3/fundamentals">Scott Murray's tutorial</a>
       </ul>
     </p>
   </div>
